JSON mapper are static.